@@ -18,6 +18,7 @@
  *  along with The Mana World; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
+ *  $Id$
  */
 
 #ifndef _PARTICLE_H
@@ -42,16 +43,16 @@ typedef std::list<ParticleEmitter *> Emitters;
 typedef Emitters::iterator EmitterIterator;
 
 /**
- * a particle spawned by a ParticleEmitter
+ * A particle spawned by a ParticleEmitter.
  */
 class Particle : public Sprite
 {
     public:
-        static const float PARTICLE_SKY;    /**< maximum Z position of particles */
-        static int fastPhysics;             /**< mode of squareroot calculation */
-        static int particleCount;           /**< current number of particles*/
-        static int maxCount;                /**< maximum number of particles*/
-        static int emitterSkip;             /**< duration of pause between two emitter updates in ticks */
+        static const float PARTICLE_SKY; /**< Maximum Z position of particles */
+        static int fastPhysics;          /**< Mode of squareroot calculation */
+        static int particleCount;        /**< Current number of particles */
+        static int maxCount;             /**< Maximum number of particles */
+        static int emitterSkip;          /**< Duration of pause between two emitter updates in ticks */
 
         Particle(Map *map);
 
@@ -93,71 +94,71 @@ class Particle : public Sprite
         };
 
         /*
-            Basic Particle properites:
+            Basic Particle properties:
          */
 
         /**
-         * Sets the map the particle is on
+         * Sets the map the particle is on.
          */
         void setMap(Map *map);
 
         /**
          * Creates a child particle that hosts some emitters described in the
-         * particleEffectFile
+         * particleEffectFile.
          */
         Particle*
-        addEffect (std::string particleEffectFile, int pixelX, int pixelY);
+        addEffect(std::string particleEffectFile, int pixelX, int pixelY);
 
         /**
-         * Creates a standalone text particle
+         * Creates a standalone text particle.
          */
         Particle*
         addTextSplashEffect(std::string text, int colorR, int colorG, int colorB,
                             gcn::Font *font, int x, int y);
 
         /**
-         * Adds an emitter to the particle
+         * Adds an emitter to the particle.
          */
         void
         addEmitter (ParticleEmitter* emitter)
-        { mChildEmitters.push_back(emitter);};
+        { mChildEmitters.push_back(emitter); }
 
         /**
          * Sets the position in 3 dimensional space in pixels relative to map
          */
         void
         setPosition(float x, float y, float z)
-        { mPosX = x; mPosY = y; mPosZ = z; };
+        { mPosX = x; mPosY = y; mPosZ = z; }
 
         /**
          * Sets the position in 2 dimensional space in pixels relative to map
          */
         void
         setPosition(float x, float y)
-        { mPosX = x; mPosY = y; };
+        { mPosX = x; mPosY = y; }
 
         float getPosX() const
-        { return mPosX; };
+        { return mPosX; }
 
         float getPosY() const
-        { return mPosY; };
+        { return mPosY; }
 
         float getPosZ() const
-        { return mPosZ; };
+        { return mPosZ; }
 
         /**
          * Changes the particle position relative
          */
         void
         moveBy(float x, float y, float z)
-        { mPosX += x; mPosY += y; mPosZ += z; };
+        { mPosX += x; mPosY += y; mPosZ += z; }
 
         /**
          * Sets the time in game ticks until the particle is destroyed.
          */
         void
         setLifetime(int lifetime)
-        { mLifetimeLeft = lifetime; mLifetimePast = 0; };
+        { mLifetimeLeft = lifetime; mLifetimePast = 0; }
 
         /**
          * Sets the age of the pixel in game ticks where the particle has
@@ -165,7 +166,7 @@ class Particle : public Sprite
          */
         void
         setFadeOut (int fadeOut)
-        { mFadeOut = fadeOut; };
+        { mFadeOut = fadeOut; }
 
         /**
          * Sets the remaining particle lifetime where the particle starts to
@@ -173,7 +174,7 @@ class Particle : public Sprite
          */
         void
         setFadeIn (int fadeIn)
-        { mFadeIn = fadeIn; };
+        { mFadeIn = fadeIn; }
 
         /**
          * Sets the sprite iterator of the particle on the current map to make
@@ -181,35 +182,35 @@ class Particle : public Sprite
          */
         void
         setSpriteIterator(std::list<Sprite*>::iterator spriteIterator)
-        { mSpriteIterator = spriteIterator; };
+        { mSpriteIterator = spriteIterator; }
 
         /**
          * Gets the sprite iterator of the particle on the current map
          */
         std::list<Sprite*>::iterator
         getSpriteIterator() const
-        { return mSpriteIterator; };
+        { return mSpriteIterator; }
 
         /**
          * Sets the current velocity in 3 dimensional space
          */
         void
         setVector(float x, float y, float z)
-        { mVectorX = x; mVectorY = y; mVectorZ = z; };
+        { mVectorX = x; mVectorY = y; mVectorZ = z; }
 
         /**
          * Sets the downward acceleration
          */
         void
         setGravity(float g)
-        { mGravity = g; };
+        { mGravity = g; }
 
         /**
          * Sets the ammount of random vector changes
          */
         void
         setRandomnes(int r)
-        { mRandomnes = r; };
+        { mRandomnes = r; }
 
         /**
          * Sets the ammount of velocity particles retain after
@@ -217,14 +218,14 @@ class Particle : public Sprite
          */
         void
         setBounce(float bouncieness)
-        { mBounce = bouncieness; };
+        { mBounce = bouncieness; }
 
         /**
          * Makes the particle move toward another particle with a
          * given acceleration and momentum
          */
         void setDestination(Particle *target, float accel, float moment)
-        { mTarget = target; mAcceleration = accel; mMomentum = moment; };
+        { mTarget = target; mAcceleration = accel; mMomentum = moment; }
 
         /**
          * Sets the distance in pixel the particle can come near the target
@@ -232,20 +233,20 @@ class Particle : public Sprite
          * target particle has been set using setDestination.
          */
         void setDieDistance(float dist)
-        { mInvDieDistance = 1.0f / dist; };
+        { mInvDieDistance = 1.0f / dist; }
 
         /**
          * Manually marks the particle for deletion
          */
         void kill()
-        { mAlive = false; mAutoDelete = true; };
+        { mAlive = false; mAutoDelete = true; }
 
         /**
          * After calling this function the particle will only request
          * deletion when kill() is called
          */
         void disableAutoDelete()
-        { mAutoDelete = false; };
+        { mAutoDelete = false; }
 
     protected:
         bool mAlive;                /**< Is the particle supposed to be drawn and updated?*/
